objects/Account.object
<CustomObject>
    <fields>
        <fullName>AKA__c</fullName>
        <description>Collections-requested field to store a customer&apos;s alternate name or where they may indicate pronunciation.</description>
        <label>AKA (Also Known As)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>External ID:
Dealer: Dealership number
Branch: City State Zip</description>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BillingStreet1__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to break the BillingStreet field into a line 1 and line 2 - this is line 1</description>
        <formula>IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), BillingStreet) = 0, BillingStreet, LEFT(BillingStreet, FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), BillingStreet) - 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet2__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to break the BillingStreet field into a line 1 and line 2 - this is line 2</description>
        <formula>IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), BillingStreet) = 0, &quot; &quot;, RIGHT(BillingStreet, LEN(BillingStreet) - FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), BillingStreet)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Type__c</fullName>
        <label>Branch Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPersonAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CustomerPersonAccount is the &apos;parent&apos; customer for all Weblogin Person Account records</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebloginAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Center__c</fullName>
        <label>Customer Support Center</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <formula>Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Type__c</fullName>
        <label>Dealership Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <description>Region number
Dealership region (Actual Region)</description>
        <label>Region Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGUID__c</fullName>
        <description>Unique Identifier from the Toyota and Lexus Web portal.
This will also be used as the SSO federation id.</description>
        <label>SGUID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SSN_TIN_Last_4__c</fullName>
        <description>SRC: SFDC(Workflow rules populate this field based on Account Record type and Tax_Identification_Number__c /Social_Security_Number_pc fields
INT: IVR Lookup
Trans: ?
BU:  IVR Lookup, Customer Service
FD: This field is created for efficient IVR Lookup and derives last 4 characters of SSN (for Person Accounts) OR TIN(For Business Accounts)</description>
        <label>SSN/TIN Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_TIN_Last_6__c</fullName>
        <description>SRC: SFDC(Workflow rules populate this field based on Account Record type and Tax_Identification_Number__c /Social_Security_Number_pc fields
INT: IVR Lookup
Trans: ?
BU:  IVR Lookup, Customer Service
FD: This field is created for efficient IVR Lookup and derives last 6 characters of SSN (for Person Accounts) OR TIN(For Business Accounts)</description>
        <label>SSN/TIN Last 6</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Email__c</fullName>
        <label>Servicing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number_Last_4_Chars__c</fullName>
        <formula>TRIM(RIGHT(Tax_Identification_Number__c, 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Identification Number Last 4 Chars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number_Last_6_Chars__c</fullName>
        <formula>TRIM(RIGHT(Tax_Identification_Number__c, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Identification Number Last 6 Chars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <externalId>true</externalId>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Customer_Id__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>Universal Customer Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Auction</fullName>
        <active>true</active>
        <description>A service provider that assists in the disposition and sale of repossessed vehicles</description>
        <label>Auction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <description>Record Type for Branch Account</description>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Community_Account</fullName>
        <active>true</active>
        <description>Accounts used as Community parking lots for Contacts.</description>
        <label>Community Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <description>Record Type for Dealer Account</description>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_To_Case_Account</fullName>
        <active>true</active>
        <description>Used for Web-To-Case type Cases.</description>
        <label>Web-To-Case Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>